modified file link colors

--- a/layout.css
+++ b/layout.css
@@ -14,11 +14,11 @@ a:hover {
 }
 
 a.file {
-  color: #FFBB00;
+  color: #FFCC00;
 }
 
 a.file2 {
-  color: #FFFF00;
+  color: #ff8800;
 }
 
 input {
