Verschiedene Farben fuer normalen Text

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -21,6 +21,14 @@ a.file2 {
   color: #ff8800;
 }
 
+.file {
+  color: #FFCC00;
+}
+
+.file2 {
+  color: #ff8800;
+}
+
 input {
   background-color: #222222;
   color: #08c0e0;
