Support fuer Playlisten eingebaut

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -21,6 +21,14 @@ a.file2 {
   color: #ff8800;
 }
 
+a.playlist {
+  color: #ff7700;
+}
+
+a.playlist2 {
+  color: #ff5500;
+}
+
 .file {
   color: #FFCC00;
 }
