--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -29,10 +29,9 @@ a.playlist2 {
   color: #ff5500;
 }
 
-p.blacklisted {
+span.blacklisted {
   color: #FF0000;
   font-weight: bold;
-  text-align: center;
 }
 
 .file {
