admin.pl  - Text des Reset-Buttons korrigiert
statistics.pl
 - Enqueue fuer gelistete Dateien

fileinfo.pl
 - Enqueue-Funktion

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -52,10 +52,12 @@ span.blacklisted {
 
 .file {
   color: #FFCC00;
+  font-weight: bold;
 }
 
 .file2 {
   color: #ff8800;
+  font-weight: bold;
 }
 
 input {
