- Darstellung der Playlists angepasst - Playlists koennen jetzt umbenannt werden

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -84,6 +84,10 @@ td.fileinfoimage {
   padding-top:0px;
 }
 
+td.playlists {
+  text-align: center;
+}
+
 p.configdescription {
   width: 30em;
   margin-bottom: 2em;
