Duennerer Rahmen fuer die Suchmaske

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -116,6 +116,7 @@ th.configsection {
 }
 
 fieldset#searchform {
+    border-width: thin;
     width: 80%;
     padding: 1em;
     background-color: #222;
