--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -126,6 +126,7 @@ fieldset.searchform {
 
 legend.searchform {
     font-weight: bold;
+    font-size: smaller;
     color: #DDD;
     padding-left: 0.5em;
     padding-right: 0.5em;
