- Neues Anlegen einer Playlist fuehrt sofort in den Editor - Anzeige, ob eine Playlist leer ist - "New list" ueberschreibt keine existierenden Listen

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -102,8 +102,16 @@ td.fileinfoimage {
   padding-top:0px;
 }
 
+table#playlists {
+	margin-bottom: 2em;
+}
+
 td.playlists {
   text-align: center;
+}
+
+span.emptylist {
+	font-style: italic;
 }
 
 p.configdescription {
