--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -165,6 +165,7 @@ fieldset.searchform {
     background-color: #222;
     margin-left: auto;
     margin-right: auto;
+	 margin-bottom: 1em;
 }
 
 legend.searchform {
