--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -1,259 +1,15 @@
-body {
-  background-color: #111111;
-  color: #08c0e0;
-  font-size: 16pt;
-}
-
-a { 
-  color: #08c0e0;
-  text-decoration: none;
-  font-weight: normal;
-}
-
-a:hover {
-  color: #0290B0;
-}
-
-a.dir {
-  color: #08c0e0;
-}
-
-a.dir2 {
-  color: #1080A0;
-}
-
 a.file {
-  color: #FFCC00;
+  color: #FFCC00 !important;
 }
 
 a.file2 {
-  color: #ff8800;
+  color: #ff8800 !important;
 }
 
 a.playlist {
-  color: #ff7700;
+  color: #ff7700 !important;
 }
 
 a.playlist2 {
-  color: #ff5500;
+  color: #ff5500 !important;
 }
-
-a.actionlink {
-  margin: 4px;
-}
-
-b.dir {
-  color: #08c0e0;;
-}
-
-b.dir2 {
-  color: #1080A0;
-}
-
-h1 {
-	font-size: 1.5em;
-	color: #DDD;
-}
-
-h1 a {
-	color: #DDD;
-}
-
-h1 a:hover {
-	color: #AAA;
-}
-
-h2 {
-	font-size: 1.3em;
-	color: #DDD;
-}
-
-span.blacklisted {
-  color: #FF0000;
-  font-weight: bold;
-}
-
-.file {
-  color: #FFCC00;
-}
-
-.file2 {
-  color: #ff8800;
-}
-
-input {
-  background-color: #222222;
-  color: #08c0e0;
-  border-color:#000000;
-}
-
-select {
-  background-color: #222222;
-  color: #08c0e0;
-  border-color:#000000;
-}
-
-td.fileinfo {
-  padding-top:10px;
-  padding-bottom:10px;
-}
-
-td.fileinfoimage {
-  text-align:right;
-  padding-left:10px; 
-  padding-right:0px; 
-  padding-top:0px;
-}
-
-table#playlists {
-	margin-bottom: 2em;
-}
-
-td.playlists {
-  text-align: center;
-}
-
-span.emptylist {
-	font-style: italic;
-}
-
-p.configdescription {
-  width: 30em;
-  margin-bottom: 2em;
-}
-
-img {
-	border: 0
-}
-
-table#scoretable {
-	width: 100%;
-}
-
-table#scoretable th {
-	color: #DDD;
-	font-size: larger;
-	padding-bottom: 1em;
-}
-
-table.statistictable {
-	width: 100%;
-}
-
-table.statistictable th {
-	color: #DDD;
-	font-size: larger;
-	padding-bottom: 1em;
-	text-align: left;
-}
-
-td.configok {
-    color: #000000;
-    background: #00FF00;
-}
-
-td.configerror {
-    color: #000000;
-    background: #FF0000;
-}
-
-th.configsection {
-    text-align: left;
-}
-
-fieldset.searchform {
-    border-width: thin;
-    padding: 1em;
-    background-color: #222;
-    margin-left: auto;
-    margin-right: auto;
-	 margin-bottom: 1em;
-}
-
-legend.searchform {
-    font-weight: bold;
-    font-size: smaller;
-    color: #DDD;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-}
-
-input#searchfield {
-	width: 150px;
-}
-
-input#searchsubmit {
-    margin-left: 2em;
-}
-
-table#searchoptions {
-    width: 100%;
-    border: 0px;
-    margin-top: 1em;
-}
-
-ul#navigation {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
-
-ul#navigation li {
-    list-style: none;
-    display: inline;
-    float: left;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-ul#navigation li.double {
-    width: 40%;
-}
-
-ul#navigation a {
-    margin-left: auto;
-    color: #DDD;
-    text-decoration: none;
-}
-
-ul#navigation a:hover {
-    color: #AAA;
-}
-
-pre#lyric {
-    font-family: sans-serif;
-}
-
-/* Overriding jquery CSS, perhaps use a custom theme here */
-
-div.ui-header {
-    background-color: #111111 !important;
-}
-
-div.ui-content {
-    background-color: #111111 !important;
-}
-
-div.ui-page-theme-a {
-    color: #08c0e0 !important;
-    text-shadow: none !important;
-}
-
-.ui-navbar .ui-btn {
-    background-color: #222222 !important;
-    color: #FFFFFF !important;
-    text-shadow: none !important;
-}
-
-.ui-mini-btn {
-    padding: 0.1em;
-}
-
-a.file:visited {
-    color: #FFCC00;
-}
-
-a.file:hover {
-    color: #FFCC00;
-}
-
