--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -127,13 +127,14 @@ img {
 }
 
 img.actionButton {
-    width: 40px;
-    margin-left:5px;
-    margin-right:5px;
+    width: 45px;
+    margin-left:8px;
+    margin-right:8px;
 }
 
 table#home {
     max-width:600px;
+    margin-bottom:2em;
 }
 
 
@@ -198,16 +199,18 @@ input#searchsubmit {
 }
 
 input.volslider {
-    width: 115px;
+    width: 135px;
     height: 16px;
     padding: 0px; 
     margin: 0px; 
+    margin-top:1em;
 }
 
 input.volsubmit {
     height: 16px;
     padding: 0px; 
     margin: 0px; 
+    margin-top:1em;
 }
 
 table#searchoptions {
