removed ugly grey border

--- a/themes/default/layout.css
+++ b/themes/default/layout.css
@@ -204,6 +204,7 @@ input.volslider {
     padding: 0px; 
     margin: 0px; 
     margin-top:1em;
+    background-color:transparent;
 }
 
 input.volsubmit {
@@ -211,6 +212,7 @@ input.volsubmit {
     padding: 0px; 
     margin: 0px; 
     margin-top:1em;
+    background-color:transparent;
 }
 
 table#searchoptions {
